some explanation of what each measurement is

--- a/test_food_kg.ipynb
+++ b/test_food_kg.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.517617Z",
-     "start_time": "2025-11-22T03:36:15.283728Z"
+     "end_time": "2025-11-22T03:41:32.806851Z",
+     "start_time": "2025-11-22T03:41:32.591841Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.523510Z",
-     "start_time": "2025-11-22T03:36:15.521643Z"
+     "end_time": "2025-11-22T03:41:32.812846Z",
+     "start_time": "2025-11-22T03:41:32.810422Z"
     }
    },
    "cell_type": "code",
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.542029Z",
-     "start_time": "2025-11-22T03:36:15.527487Z"
+     "end_time": "2025-11-22T03:41:32.831560Z",
+     "start_time": "2025-11-22T03:41:32.817194Z"
     }
    },
    "cell_type": "code",
@@ -166,8 +166,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.573326Z",
-     "start_time": "2025-11-22T03:36:15.566389Z"
+     "end_time": "2025-11-22T03:41:32.863414Z",
+     "start_time": "2025-11-22T03:41:32.856313Z"
     }
    },
    "cell_type": "code",
@@ -196,18 +196,18 @@
        "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
        "\n",
        "                                            pred_set  \\\n",
-       "0  {pecan, evaporated milk, vanilla, shredded ric...   \n",
-       "1  {sour cream, chicken breast, chipped beef, cre...   \n",
-       "2  {corn, salt, cream cheese, pepper, butter, gar...   \n",
-       "3  {chicken gravy, stuffing, chicken, mushroom so...   \n",
-       "4  {graham cracker crumb, powdered sugar, chocola...   \n",
+       "0  {pecan, butter, shredded rice biscuit, brown s...   \n",
+       "1  {chipped beef, cream of mushroom soup, sour cr...   \n",
+       "2  {salt, pepper, corn, butter, garlic powder, cr...   \n",
+       "3  {cheese, stuffing, mushroom soup, chicken, chi...   \n",
+       "4  {peanut butter, butter, chocolate chip, graham...   \n",
        "\n",
        "                                            test_set  \n",
-       "0  {pecan, evaporated milk, vanilla, brown sugar,...  \n",
-       "1  {sour cream, chicken breast, chipped beef, cre...  \n",
-       "2  {corn, black pepper, salt, cream cheese, butte...  \n",
-       "3  {whole chicken, cream of mushroom soup, chicke...  \n",
-       "4  {chocolate chip, powdered sugar, graham cracke...  "
+       "0  {pecan, margarine, butter, rice biscuit, brown...  \n",
+       "1  {chipped beef, cream of mushroom soup, sour cr...  \n",
+       "2  {black pepper, salt, corn, butter, garlic powd...  \n",
+       "3  {cheese, stuffing, cream of mushroom soup, who...  \n",
+       "4  {graham cracker, peanut butter, butter, chocol...  "
       ],
       "text/html": [
        "<div>\n",
@@ -239,36 +239,36 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{pecan, evaporated milk, vanilla, shredded ric...</td>\n",
-       "      <td>{pecan, evaporated milk, vanilla, brown sugar,...</td>\n",
+       "      <td>{pecan, butter, shredded rice biscuit, brown s...</td>\n",
+       "      <td>{pecan, margarine, butter, rice biscuit, brown...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "      <td>{sour cream, chicken breast, chipped beef, cre...</td>\n",
-       "      <td>{sour cream, chicken breast, chipped beef, cre...</td>\n",
+       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
+       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{corn, salt, cream cheese, pepper, butter, gar...</td>\n",
-       "      <td>{corn, black pepper, salt, cream cheese, butte...</td>\n",
+       "      <td>{salt, pepper, corn, butter, garlic powder, cr...</td>\n",
+       "      <td>{black pepper, salt, corn, butter, garlic powd...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{chicken gravy, stuffing, chicken, mushroom so...</td>\n",
-       "      <td>{whole chicken, cream of mushroom soup, chicke...</td>\n",
+       "      <td>{cheese, stuffing, mushroom soup, chicken, chi...</td>\n",
+       "      <td>{cheese, stuffing, cream of mushroom soup, who...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{graham cracker crumb, powdered sugar, chocola...</td>\n",
-       "      <td>{chocolate chip, powdered sugar, graham cracke...</td>\n",
+       "      <td>{peanut butter, butter, chocolate chip, graham...</td>\n",
+       "      <td>{graham cracker, peanut butter, butter, chocol...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -285,8 +285,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.655606Z",
-     "start_time": "2025-11-22T03:36:15.652986Z"
+     "end_time": "2025-11-22T03:41:32.954574Z",
+     "start_time": "2025-11-22T03:41:32.951941Z"
     }
    },
    "cell_type": "code",
@@ -326,8 +326,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.680841Z",
-     "start_time": "2025-11-22T03:36:15.668776Z"
+     "end_time": "2025-11-22T03:41:32.984833Z",
+     "start_time": "2025-11-22T03:41:32.973043Z"
     }
    },
    "cell_type": "code",
@@ -357,8 +357,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.693193Z",
-     "start_time": "2025-11-22T03:36:15.684625Z"
+     "end_time": "2025-11-22T03:41:33.001161Z",
+     "start_time": "2025-11-22T03:41:32.989357Z"
     }
    },
    "cell_type": "code",
@@ -382,43 +382,43 @@
        "99  99  ['1 box yellow cake mix', '2 eggs', '1/3 c. so...   \n",
        "\n",
        "                                             pred_set  \\\n",
-       "0   {pecan, evaporated milk, vanilla, shredded ric...   \n",
-       "1   {sour cream, chicken breast, chipped beef, cre...   \n",
-       "2   {corn, salt, cream cheese, pepper, butter, gar...   \n",
-       "3   {chicken gravy, stuffing, chicken, mushroom so...   \n",
-       "4   {graham cracker crumb, powdered sugar, chocola...   \n",
+       "0   {pecan, butter, shredded rice biscuit, brown s...   \n",
+       "1   {chipped beef, cream of mushroom soup, sour cr...   \n",
+       "2   {salt, pepper, corn, butter, garlic powder, cr...   \n",
+       "3   {cheese, stuffing, mushroom soup, chicken, chi...   \n",
+       "4   {peanut butter, butter, chocolate chip, graham...   \n",
        "..                                                ...   \n",
-       "95  {pork and beans, onion, black pepper, oil, gro...   \n",
-       "96  {onion, shortening, catsup, soy sauce, vinegar...   \n",
-       "97  {orange, pecan, orange juice, coconut, sugar, ...   \n",
-       "98                        {sugar, egg, peanut butter}   \n",
-       "99  {pecan, yellow cake mix, bit, milk, soft marga...   \n",
+       "95  {onion, salt, catsup, black pepper, bell peppe...   \n",
+       "96  {onion, cornstarch, ginger, catsup, soy sauce,...   \n",
+       "97  {pecan, orange juice, orange, sugar, cherry, c...   \n",
+       "98                        {sugar, peanut butter, egg}   \n",
+       "99  {bit, pecan, soft margarine, yellow cake mix, ...   \n",
        "\n",
        "                                             test_set  \\\n",
-       "0   {pecan, evaporated milk, vanilla, brown sugar,...   \n",
-       "1   {sour cream, chicken breast, chipped beef, cre...   \n",
-       "2   {corn, black pepper, salt, cream cheese, butte...   \n",
-       "3   {whole chicken, cream of mushroom soup, chicke...   \n",
-       "4   {chocolate chip, powdered sugar, graham cracke...   \n",
+       "0   {pecan, margarine, butter, rice biscuit, brown...   \n",
+       "1   {chipped beef, cream of mushroom soup, sour cr...   \n",
+       "2   {black pepper, salt, corn, butter, garlic powd...   \n",
+       "3   {cheese, stuffing, cream of mushroom soup, who...   \n",
+       "4   {graham cracker, peanut butter, butter, chocol...   \n",
        "..                                                ...   \n",
-       "95  {pork and beans, onion, black pepper, oil, gro...   \n",
-       "96  {onion, shortening, catsup, soy sauce, vinegar...   \n",
-       "97  {orange, pecan, orange juice, coconut, sugar, ...   \n",
-       "98                        {sugar, egg, peanut butter}   \n",
-       "99  {pecan, yellow cake mix, toffee bit, milk, mar...   \n",
+       "95  {onion, salt, catsup, black pepper, bell peppe...   \n",
+       "96  {onion, cornstarch, ginger, catsup, soy sauce,...   \n",
+       "97  {pecan, orange juice, orange, sugar, cherry, c...   \n",
+       "98                        {sugar, peanut butter, egg}   \n",
+       "99  {pecan, margarine, toffee bit, yellow cake mix...   \n",
        "\n",
        "                   pred_only                                test_only  \\\n",
        "0    {shredded rice biscuit}                {margarine, rice biscuit}   \n",
        "1                         {}                                       {}   \n",
        "2                   {pepper}                           {black pepper}   \n",
-       "3   {chicken, mushroom soup}  {whole chicken, cream of mushroom soup}   \n",
+       "3   {mushroom soup, chicken}  {cream of mushroom soup, whole chicken}   \n",
        "4     {graham cracker crumb}                         {graham cracker}   \n",
        "..                       ...                                      ...   \n",
        "95                        {}                                       {}   \n",
        "96                        {}                                       {}   \n",
        "97                        {}                                       {}   \n",
        "98                        {}                                       {}   \n",
-       "99     {soft margarine, bit}                  {toffee bit, margarine}   \n",
+       "99     {soft margarine, bit}                  {margarine, toffee bit}   \n",
        "\n",
        "    intersection_size  union_size   overlap   jaccard  precision    recall  \\\n",
        "0                   5           8  0.714286  0.625000   0.833333  0.714286   \n",
@@ -487,8 +487,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{pecan, evaporated milk, vanilla, shredded ric...</td>\n",
-       "      <td>{pecan, evaporated milk, vanilla, brown sugar,...</td>\n",
+       "      <td>{pecan, butter, shredded rice biscuit, brown s...</td>\n",
+       "      <td>{pecan, margarine, butter, rice biscuit, brown...</td>\n",
        "      <td>{shredded rice biscuit}</td>\n",
        "      <td>{margarine, rice biscuit}</td>\n",
        "      <td>5</td>\n",
@@ -503,8 +503,8 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "      <td>{sour cream, chicken breast, chipped beef, cre...</td>\n",
-       "      <td>{sour cream, chicken breast, chipped beef, cre...</td>\n",
+       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
+       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>4</td>\n",
@@ -519,8 +519,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{corn, salt, cream cheese, pepper, butter, gar...</td>\n",
-       "      <td>{corn, black pepper, salt, cream cheese, butte...</td>\n",
+       "      <td>{salt, pepper, corn, butter, garlic powder, cr...</td>\n",
+       "      <td>{black pepper, salt, corn, butter, garlic powd...</td>\n",
        "      <td>{pepper}</td>\n",
        "      <td>{black pepper}</td>\n",
        "      <td>5</td>\n",
@@ -535,10 +535,10 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{chicken gravy, stuffing, chicken, mushroom so...</td>\n",
-       "      <td>{whole chicken, cream of mushroom soup, chicke...</td>\n",
-       "      <td>{chicken, mushroom soup}</td>\n",
-       "      <td>{whole chicken, cream of mushroom soup}</td>\n",
+       "      <td>{cheese, stuffing, mushroom soup, chicken, chi...</td>\n",
+       "      <td>{cheese, stuffing, cream of mushroom soup, who...</td>\n",
+       "      <td>{mushroom soup, chicken}</td>\n",
+       "      <td>{cream of mushroom soup, whole chicken}</td>\n",
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>0.600000</td>\n",
@@ -551,8 +551,8 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{graham cracker crumb, powdered sugar, chocola...</td>\n",
-       "      <td>{chocolate chip, powdered sugar, graham cracke...</td>\n",
+       "      <td>{peanut butter, butter, chocolate chip, graham...</td>\n",
+       "      <td>{graham cracker, peanut butter, butter, chocol...</td>\n",
        "      <td>{graham cracker crumb}</td>\n",
        "      <td>{graham cracker}</td>\n",
        "      <td>4</td>\n",
@@ -583,8 +583,8 @@
        "      <th>95</th>\n",
        "      <td>95</td>\n",
        "      <td>['3 (1 lb.) cans pork and beans', '1/2 c. bell...</td>\n",
-       "      <td>{pork and beans, onion, black pepper, oil, gro...</td>\n",
-       "      <td>{pork and beans, onion, black pepper, oil, gro...</td>\n",
+       "      <td>{onion, salt, catsup, black pepper, bell peppe...</td>\n",
+       "      <td>{onion, salt, catsup, black pepper, bell peppe...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>9</td>\n",
@@ -599,8 +599,8 @@
        "      <th>96</th>\n",
        "      <td>96</td>\n",
        "      <td>['2 c. diced cooked chicken', '2 Tbsp. shorten...</td>\n",
-       "      <td>{onion, shortening, catsup, soy sauce, vinegar...</td>\n",
-       "      <td>{onion, shortening, catsup, soy sauce, vinegar...</td>\n",
+       "      <td>{onion, cornstarch, ginger, catsup, soy sauce,...</td>\n",
+       "      <td>{onion, cornstarch, ginger, catsup, soy sauce,...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>14</td>\n",
@@ -615,8 +615,8 @@
        "      <th>97</th>\n",
        "      <td>97</td>\n",
        "      <td>['8 to 10 juicy oranges, peeled and diced', '1...</td>\n",
-       "      <td>{orange, pecan, orange juice, coconut, sugar, ...</td>\n",
-       "      <td>{orange, pecan, orange juice, coconut, sugar, ...</td>\n",
+       "      <td>{pecan, orange juice, orange, sugar, cherry, c...</td>\n",
+       "      <td>{pecan, orange juice, orange, sugar, cherry, c...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>6</td>\n",
@@ -631,8 +631,8 @@
        "      <th>98</th>\n",
        "      <td>98</td>\n",
        "      <td>['1 c. creamy peanut butter', '1 c. sugar', '1...</td>\n",
-       "      <td>{sugar, egg, peanut butter}</td>\n",
-       "      <td>{sugar, egg, peanut butter}</td>\n",
+       "      <td>{sugar, peanut butter, egg}</td>\n",
+       "      <td>{sugar, peanut butter, egg}</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>3</td>\n",
@@ -647,10 +647,10 @@
        "      <th>99</th>\n",
        "      <td>99</td>\n",
        "      <td>['1 box yellow cake mix', '2 eggs', '1/3 c. so...</td>\n",
-       "      <td>{pecan, yellow cake mix, bit, milk, soft marga...</td>\n",
-       "      <td>{pecan, yellow cake mix, toffee bit, milk, mar...</td>\n",
+       "      <td>{bit, pecan, soft margarine, yellow cake mix, ...</td>\n",
+       "      <td>{pecan, margarine, toffee bit, yellow cake mix...</td>\n",
        "      <td>{soft margarine, bit}</td>\n",
-       "      <td>{toffee bit, margarine}</td>\n",
+       "      <td>{margarine, toffee bit}</td>\n",
        "      <td>4</td>\n",
        "      <td>8</td>\n",
        "      <td>0.666667</td>\n",
@@ -675,39 +675,39 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.741209Z",
-     "start_time": "2025-11-22T03:36:15.738942Z"
+     "end_time": "2025-11-22T03:41:42.563168Z",
+     "start_time": "2025-11-22T03:41:42.559574Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "print(f\"Overlap:  {new_df['overlap'].mean():.4f}\")\n",
-    "print(f\"Jaccard:   {new_df['jaccard'].mean():.4f}\")\n",
-    "print(f\"Precision: {new_df['precision'].mean():.4f}\")\n",
-    "print(f\"Recall:    {new_df['recall'].mean():.4f}\")\n",
-    "print(f\"F1:        {new_df['f1'].mean():.4f}\")"
+    "print(f\"Overlap:   {new_df['overlap'].mean():.4f} (Intersection divided by the size of the larger set)\")\n",
+    "print(f\"Jaccard:   {new_df['jaccard'].mean():.4f} (Intersection divided by the size of the union)\")\n",
+    "print(f\"Precision: {new_df['precision'].mean():.4f} (Fraction of predicted ingredients that are correct)\")\n",
+    "print(f\"Recall:    {new_df['recall'].mean():.4f} (Fraction of actual ingredients that were predicted)\")\n",
+    "print(f\"F1:        {new_df['f1'].mean():.4f} (Harmonic mean of precision and recall)\")"
    ],
-   "id": "62378e0136f015ad",
+   "id": "d3682cabb0961f6",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overlap:  0.8744\n",
-      "Jaccard:   0.8104\n",
-      "Precision: 0.8834\n",
-      "Recall:    0.8756\n",
-      "F1:        0.8791\n"
+      "Overlap:   0.8744 (Intersection divided by the size of the larger set)\n",
+      "Jaccard:   0.8104 (Intersection divided by the size of the union)\n",
+      "Precision: 0.8834 (Fraction of predicted ingredients that are correct)\n",
+      "Recall:    0.8756 (Fraction of actual ingredients that were predicted)\n",
+      "F1:        0.8791 (Harmonic mean of precision and recall)\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:36:15.773387Z",
-     "start_time": "2025-11-22T03:36:15.772140Z"
+     "end_time": "2025-11-22T03:41:33.089720Z",
+     "start_time": "2025-11-22T03:41:33.088545Z"
     }
    },
    "cell_type": "code",
