--- a/test_products.ipynb
+++ b/test_products.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:46.863645Z",
-     "start_time": "2025-11-22T01:57:46.622470Z"
+     "end_time": "2025-11-22T03:42:38.240274Z",
+     "start_time": "2025-11-22T03:42:38.004498Z"
     }
    },
    "source": "import pandas as pd",
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:46.869650Z",
-     "start_time": "2025-11-22T01:57:46.867037Z"
+     "end_time": "2025-11-22T03:42:38.245905Z",
+     "start_time": "2025-11-22T03:42:38.243475Z"
     }
    },
    "cell_type": "code",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:46.894072Z",
-     "start_time": "2025-11-22T01:57:46.873795Z"
+     "end_time": "2025-11-22T03:42:38.273346Z",
+     "start_time": "2025-11-22T03:42:38.250458Z"
     }
    },
    "cell_type": "code",
@@ -150,8 +150,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:46.922630Z",
-     "start_time": "2025-11-22T01:57:46.916599Z"
+     "end_time": "2025-11-22T03:42:38.304516Z",
+     "start_time": "2025-11-22T03:42:38.298425Z"
     }
    },
    "cell_type": "code",
@@ -306,8 +306,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:47.010716Z",
-     "start_time": "2025-11-22T01:57:47.007892Z"
+     "end_time": "2025-11-22T03:42:38.381818Z",
+     "start_time": "2025-11-22T03:42:38.379229Z"
     }
    },
    "cell_type": "code",
@@ -347,8 +347,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:47.079629Z",
-     "start_time": "2025-11-22T01:57:47.034324Z"
+     "end_time": "2025-11-22T03:42:38.438353Z",
+     "start_time": "2025-11-22T03:42:38.395211Z"
     }
    },
    "cell_type": "code",
@@ -375,8 +375,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:47.118696Z",
-     "start_time": "2025-11-22T01:57:47.110826Z"
+     "end_time": "2025-11-22T03:42:38.470300Z",
+     "start_time": "2025-11-22T03:42:38.462208Z"
     }
    },
    "cell_type": "code",
@@ -617,17 +617,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:47.476252Z",
-     "start_time": "2025-11-22T01:57:47.473720Z"
+     "end_time": "2025-11-22T03:42:38.539640Z",
+     "start_time": "2025-11-22T03:42:38.537275Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "print(f\"Overlap:  {new_df['overlap'].mean():.4f}\")\n",
-    "print(f\"Jaccard:   {new_df['jaccard'].mean():.4f}\")\n",
-    "print(f\"Precision: {new_df['precision'].mean():.4f}\")\n",
-    "print(f\"Recall:    {new_df['recall'].mean():.4f}\")\n",
-    "print(f\"F1:        {new_df['f1'].mean():.4f}\")"
+    "print(f\"Overlap:   {new_df['overlap'].mean():.4f} (Intersection divided by the size of the larger set)\")\n",
+    "print(f\"Jaccard:   {new_df['jaccard'].mean():.4f} (Intersection divided by the size of the union)\")\n",
+    "print(f\"Precision: {new_df['precision'].mean():.4f} (Fraction of predicted ingredients that are correct)\")\n",
+    "print(f\"Recall:    {new_df['recall'].mean():.4f} (Fraction of actual ingredients that were predicted)\")\n",
+    "print(f\"F1:        {new_df['f1'].mean():.4f} (Harmonic mean of precision and recall)\")"
    ],
    "id": "62378e0136f015ad",
    "outputs": [
@@ -635,11 +635,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overlap:  0.4633\n",
-      "Jaccard:   0.4633\n",
-      "Precision: 0.4633\n",
-      "Recall:    0.4633\n",
-      "F1:        0.4633\n"
+      "Overlap:   0.4633 (Intersection divided by the size of the larger set)\n",
+      "Jaccard:   0.4633 (Intersection divided by the size of the union)\n",
+      "Precision: 0.4633 (Fraction of predicted ingredients that are correct)\n",
+      "Recall:    0.4633 (Fraction of actual ingredients that were predicted)\n",
+      "F1:        0.4633 (Harmonic mean of precision and recall)\n"
      ]
     }
    ],
@@ -648,8 +648,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:47.494126Z",
-     "start_time": "2025-11-22T01:57:47.492012Z"
+     "end_time": "2025-11-22T03:42:38.561255Z",
+     "start_time": "2025-11-22T03:42:38.559105Z"
     }
    },
    "cell_type": "code",
@@ -672,8 +672,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:57:47.506128Z",
-     "start_time": "2025-11-22T01:57:47.504453Z"
+     "end_time": "2025-11-22T03:42:38.619913Z",
+     "start_time": "2025-11-22T03:42:38.618518Z"
     }
    },
    "cell_type": "code",
